tests/fixtures/guardrails/invalid/route-template-imports-domain/app/routes/products.ts
export async function action(kind) {
  return import(`~/domain/${kind}.server`);
}
